# seL4-summit-2024-rust-training-code

./: .gitignore  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/microkit/: devcontainer.json
.devcontainer/root-task/: devcontainer.json
.reuse/: dep5
docker/: Dockerfile  Makefile
mk/: microkit.mk  root-task.mk
target-specs/: README.md
test-utils/: harness.py
workspaces/microkit/: .gitignore  Cargo.toml
workspaces/microkit/.cargo/: config.toml
workspaces/microkit/banscii/: Makefile  banscii.system  test.py
workspaces/microkit/banscii/pds/artist/: Cargo.toml
workspaces/microkit/banscii/pds/assistant/: Cargo.toml
workspaces/microkit/banscii/pds/serial-driver/: Cargo.toml
workspaces/microkit/banscii/pds/serial-driver/src/: main.rs
workspaces/microkit/hello/: Makefile  hello.system
workspaces/microkit/hello-world/: Makefile  hello.system
workspaces/microkit/hello-world/pds/hello/src/: main.rs
workspaces/microkit/hello/pds/hello/: Cargo.toml
workspaces/microkit/hello/pds/hello/src/: main.rs
workspaces/microkit/ipc/: Makefile  ipc.system  test.py
workspaces/microkit/ipc/pds/client/: Cargo.toml
workspaces/microkit/ipc/pds/client/src/: main.rs
workspaces/microkit/ipc/pds/server/: Cargo.toml
workspaces/microkit/ipc/pds/server/src/: main.rs
workspaces/microkit/shared-memory/: Makefile  shared-memory.system  test.py
workspaces/microkit/shared-memory/pds/client/: Cargo.toml
workspaces/microkit/shared-memory/pds/client/src/: main.rs
workspaces/microkit/shared-memory/pds/common/: Cargo.toml
workspaces/microkit/shared-memory/pds/common/src/: lib.rs
workspaces/microkit/shared-memory/pds/server/: Cargo.toml
workspaces/microkit/shared-memory/pds/server/src/: main.rs
workspaces/root-task/: Cargo.toml
workspaces/root-task/.cargo/: config.toml
workspaces/root-task/address-space/: Cargo.toml  Makefile  test.py
workspaces/root-task/address-space/src/: main.rs
workspaces/root-task/hello/: Cargo.toml  Makefile  test.py
workspaces/root-task/hello-world/: Cargo.toml  Makefile  test.py
workspaces/root-task/hello-world/src/: main.rs
workspaces/root-task/hello/src/: main.rs
workspaces/root-task/kernel-objects/: Cargo.toml  Makefile  test.py
workspaces/root-task/kernel-objects/src/: main.rs
workspaces/root-task/serial-device/: Cargo.toml  Makefile  test.py
workspaces/root-task/serial-device/src/: main.rs
workspaces/root-task/spawn-task/: Cargo.toml  Makefile  build.rs  test.py
workspaces/root-task/spawn-task/child/: Cargo.toml
workspaces/root-task/spawn-task/child/src/: main.rs  runtime.rs
workspaces/root-task/spawn-task/src/: child_vspace.rs  main.rs  object_allocator.rs
workspaces/root-task/spawn-thread/: Cargo.toml  Makefile  test.py
workspaces/root-task/spawn-thread/src/: main.rs
