#
# Copyright 2024, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]

resolver = "2"

members = [
    "hello/pds/hello",
    "ipc/pds/client",
    "ipc/pds/server",
    "shared-memory/pds/client",
    "shared-memory/pds/server",
    "banscii/pds/artist",
    "banscii/pds/assistant",
    "banscii/pds/serial-driver",
]
