#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "serial-device"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4" }
sel4-root-task = { git = "https://github.com/seL4/rust-sel4" }
tock-registers = "0.8.1"
