#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "spawn-thread"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
cfg-if = "1.0.0"
sel4 = { git = "https://github.com/seL4/rust-sel4" }
sel4-elf-header = { git = "https://github.com/seL4/rust-sel4" }
sel4-initialize-tls = { git = "https://github.com/seL4/rust-sel4" }
sel4-root-task = { git = "https://github.com/seL4/rust-sel4" }
sel4-stack = { git = "https://github.com/seL4/rust-sel4" }
