#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "spawn-task-child"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
cfg-if = "1.0.0"
sel4 = { git = "https://github.com/seL4/rust-sel4" }
sel4-dlmalloc = { git = "https://github.com/seL4/rust-sel4" }
sel4-panicking = { git = "https://github.com/seL4/rust-sel4", features = ["unwinding", "alloc"] }
sel4-panicking-env = { git = "https://github.com/seL4/rust-sel4" }
sel4-sync = { git = "https://github.com/seL4/rust-sel4" }

[dependencies.sel4-runtime-common]
git = "https://github.com/seL4/rust-sel4"
features = ["start", "tls", "unwinding"]
